--- a/src/deployment/app/templates/master.html
+++ b/src/deployment/app/templates/master.html
@@ -60,6 +60,7 @@
     {% endblock %}
 
     {% for id in ids %}
+
         <div id="{{id}}"></div>
     {% endfor %}
 </div>
@@ -68,7 +69,7 @@
     const graphs = {{graphJSON | safe}};
     const ids = {{ids | safe}};
     for(let i in graphs) {
-        Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
+        Plotly.plot(ids[i], graphs[i].data, graphs[i].layout || {});
     }
 </script>
 
